--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Figma Site</title>
+    <title>Synthetic Testing | 10kR</title>
     <style>
       html, body, iframe {
         margin: 0;
