--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <title>Synthetic Testing | 10kR</title>
+
+<meta property="og:title" content="Synthetic Testing | 10kR">
+<meta property="og:description" content="Prototype demo for AI-powered synthetic testing.">
+<meta property="og:image" content="https://synthetic-testing.10kr.co/preview.png">
+<meta property="og:url" content="https://synthetic-testing.10kr.co">
+<meta name="twitter:card" content="summary_large_image">
     <style>
       html, body, iframe {
         margin: 0;
