--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Synthetic Testing | 10kR</title>
 
 <meta property="og:title" content="Synthetic Testing | 10kR">
-<meta property="og:description" content="Prototype demo for AI-powered synthetic testing.">
+<meta property="og:description" content="AI-powered synthetic testing.">
 <meta property="og:image" content="https://synthetic-testing.10kr.co/preview.png">
 <meta property="og:url" content="https://synthetic-testing.10kr.co">
     <style>
