--- a/index.html
+++ b/index.html
@@ -4,21 +4,42 @@
     <meta charset="UTF-8" />
     <title>Synthetic Testing | 10kR</title>
 
-<meta property="og:title" content="Synthetic Testing | 10kR">
-<meta property="og:description" content="AI-powered synthetic testing.">
-<meta property="og:image" content="https://synthetic-testing.10kr.co/preview.png">
-<meta property="og:url" content="https://synthetic-testing.10kr.co">
+    <!-- Mobile scaling -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Social / link previews -->
+    <meta property="og:title" content="Synthetic Testing | 10kR">
+    <meta property="og:description" content="AI-powered synthetic testing.">
+    <meta property="og:image" content="https://synthetic-testing.10kr.co/preview.png">
+    <meta property="og:url" content="https://synthetic-testing.10kr.co">
+    <meta name="twitter:card" content="summary_large_image">
+
     <style>
-      html, body, iframe {
+      html, body {
         margin: 0;
         padding: 0;
         height: 100%;
         width: 100%;
+      }
+      .wrap {
+        width: 100vw;
+        height: 100dvh;
+        overflow: hidden;
+      }
+      iframe {
         border: none;
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
   <body>
-    <iframe src="https://exact-scout-83769983.figma.site" frameborder="0" allowfullscreen></iframe>
+    <div class="wrap">
+      <iframe 
+        src="https://exact-scout-83769983.figma.site" 
+        frameborder="0" 
+        allowfullscreen>
+      </iframe>
+    </div>
   </body>
 </html>
